# AudioBookGenerator

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  SPEC.md  analyze_chapters.py  app.py  audiobook_generator.py  audiobook_gradio_ui.py  benchmark_engines.py  config.py  describe_voice.py  generate_voice_samples.py  gradio_audiobook_interface.py  list_chapters.py  llm_describe_character.py  llm_label_speakers.py  parse_chapter.py  parse_epub.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-tests.txt  requirements.txt  test_all_engines.py  test_engines.py  test_omni.py  tts_voicemapper.py
.claude/: settings.local.json
audiobook_generator/: __init__.py  __main__.py  audio.py  audiobook_generator.py  config.py  generate_voice_samples.py  gradio_ui.py  llm_describe_character.py  llm_label_speakers.py  parse_chapter.py  pipeline.py  test_chunkformer_voices.py  test_nemotron_voices.py  testing.py  utils.py  voice_mapper.py
audiobook_generator/echo_tts/: __init__.py
audiobook_generator/engines/: __init__.py  base.py  dramabox.py  echo_tts.py  echo_tts_adapter.py  kugelaudio.py  moss.py  omni.py  pool.py  utils.py  vibevoice.py  vox.py  worker.py
audiobook_generator/engines/.environments/echo-tts/: pyproject.toml
audiobook_generator/engines/.environments/kugelaudio/: pyproject.toml
audiobook_generator/engines/.environments/moss/: pyproject.toml
audiobook_generator/engines/.environments/omni/: pyproject.toml
audiobook_generator/engines/.environments/vibevoice/: pyproject.toml
audiobook_generator/engines/.environments/vox/: pyproject.toml
audiobook_generator/engines/echo_tts/: __init__.py  inference.py
echo_tts_source/: pyproject.toml
templates/: exercises.html  index.html  patient.html  print.html
test_data/: test_pride_and_prejudice.epub
test_data_output/: create_wav.py
tests/: README.md  __init__.py  conftest.py  test_analyze_chapters.py  test_audio_quality.py  test_chunkformer_validation.py  test_concurrency.py  test_describe_voice.py  test_engines.py  test_generate_audiobook_from_chapters.py  test_generate_tts_for_line.py  test_generate_voice_samples.py  test_gradio_audiobook_interface.py  test_integration_pipeline.py  test_llm_describe_character.py  test_llm_label_speakers.py  test_parse_chapter.py  test_parse_epub.py  test_pipeline.py  test_real_engines.py  test_utils.py  test_voice_mapper.py
voice_test/: characters_descriptions.json  voices_map.json
voice_test/output/: chapter_0.map.json  chapter_0.prompt.txt  chapter_0.result.0.txt  chapter_0.think.0.txt  chapter_0.txt  characters_descriptions.json  description_metadata.json  llm_character_debug_elizabeth.json  llm_character_debug_mr._bennet.json  llm_character_debug_mrs._bennet.json  llm_character_debug_narrator.json  voices_map.json
