[project]
name = "AudioBookGenerator"
authors = [{name = "John Behrend"}]
version = "0.1.0"
description = "A LLM based epub to audiobook generator."

requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "torch",
    "torchaudio>=2.8.0",
    "torchvision>=0.20.0",
    "transformers>=4.48.0",
    "tokenizers>=0.13",
    "faster-whisper>=1.1.1",
    "whisperx>=3.8.0",
    "openai>=1.0.0",
    "pydub",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gradio>=4.0.0",
    "ebooklib>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "filelock>=3.12.0",
    "fsspec>=2023.5.0",
    "huggingface-hub>=0.21.0",
    "diffusers>=0.25.0",
    "qwen-tts",
    # flash-attn removed - requires complex CUDA setup, not essential
    # "flash-attn",
    # librosa constraint needed to avoid newer versions that require incompatible numba
    "librosa>=0.10.0,<0.11.0",
    # numba>=0.57.0 needed to get llvmlite>=0.40 which supports Python 3.10
    "numba>=0.57.0",
    "ffmpeg-python==0.2.0",
    "torchcodec==0.9.1"
]

[project.scripts]
audiobook-interface = "gradio_audiobook_interface:main"
parse-epub = "parse_epub:main"
llm-label-speakers = "llm_label_speakers:main"
analyze-chapters = "analyze_chapters:main"
llm-describe-character = "llm_describe_character:main"
generate-voice-samples = "generate_voice_samples:main"

[project.optional-dependencies]
cu128 = [
  "torch",
  "torchvision",
  "torchaudio",
]

[tool.setuptools.packages.find]
include = ["gradio_audiobook_interface.py", "parse_epub.py", "llm_label_speakers.py", "analyze_chapters.py", "llm_describe_character.py", "generate_voice_samples.py", "analyze_chapters.py"]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "black",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true