[project]
name = "AudioBookGenerator"
authors = [{name = "John Behrend"}]
version = "0.1.0"
description = "A LLM based epub to audiobook generator."

requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "torch",
    "torchaudio>=2.8.0",
    "torchvision>=0.20.0",
    "transformers>=4.48.0",
    "tokenizers>=0.13",
    "faster-whisper>=1.1.1",
    "openai>=1.0.0",
    "pydub",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gradio>=4.0.0",
    "ebooklib>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "filelock>=3.12.0",
    "fsspec>=2023.5.0",
    "huggingface-hub>=0.21.0",
    "diffusers>=0.25.0",
    "qwen-tts",
    "kugelaudio-open @ git+https://github.com/Kugelaudio/kugelaudio-open.git@c2047edda01aa31e9472d29eac498881e907d628",
    # Note: flash-attn requires --no-build-isolation due to CUDA version mismatch
    # between system CUDA (13.1) and PyTorch (12.8). Install with:
    # uv pip install flash-attn --no-build-isolation
    # "flash-attn>=2.7.0",
    # librosa constraint needed to avoid newer versions that require incompatible numba
    "librosa>=0.10.0,<0.11.0",
    # numba>=0.57.0 needed to get llvmlite>=0.40 which supports Python 3.10
    "numba>=0.57.0",
    "ffmpeg-python==0.2.0",
    "torchcodec==0.9.1"
]

[project.scripts]
audiobook-interface = "audiobook_generator.audiobook_generator:main"
parse-epub = "audiobook_generator.parse_chapter:main"
llm-label-speakers = "audiobook_generator.llm_label_speakers:main"
llm-describe-character = "audiobook_generator.llm_describe_character:main"
generate-voice-samples = "audiobook_generator.generate_voice_samples:main"


[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["audiobook_generator*"]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "black",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'win32'" },
  { index = "pypi", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform != 'win32'" },
  { index = "pypi", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform != 'win32'" },
  { index = "pypi", marker = "sys_platform == 'win32'" },
]
flash-attn = [
  { index = "pypi" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = false


