[project]
name = "echo-tts-env"
version = "0.1.0"
description = "Echo TTS environment"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "huggingface-hub",
    "numpy",
    "safetensors",
    "einops",
]

[tool.uv]
dev-dependencies = []

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]
