[project]
name = "kugelaudio-env"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=5.0.0",
    "kugelaudio-open @ git+https://github.com/Kugelaudio/kugelaudio-open.git@c2047edda01aa31e9472d29eac498881e907d628",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
